@@ -1,3 +1,11 @@
+2001-03-22  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* src/misc-inst.cc (__sink_unused_warning): Move to...
+	* src/locale-inst.cc (__sink_unused_warning): Move to...
+	* src/stl-inst.cc: Here.
+	* include/bits/c++config (_STL_NO_CONCEPT_CHECKS): Add define,
+	commented it out.
+
 2001-03-21  Theodore Papadopoulo  <Theodore.Papadopoulo@sophia.inria.fr>
 
     	* intclude/bits/basic_file.h: Fix typos in comments.
